# DAQplugin

./: .gitignore  DAQ_Score_Grid.ipynb  DAQ_Score_Pdb.ipynb  MANUAL.md  README.md  daq_score_grid.py
daqcolor/: build_wheels.py  bundle_info.xml  pyproject.toml
daqcolor/src/: __init__.py  arrow.py  cmd.py  compute.py  constants.py  mlx_model.py  onnx_model.py  tool.py  util.py
map_util/: dataset_map.py  prep_points_from_mrc.py
tests/: test_backend_fallback.py  test_window_average.py
tools/: convert_pth_to_mlx.py  test_mlx_parity.py
