[build-system]
requires = ["setuptools", "ChimeraX-BundleBuilder"]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
# ChimeraX bundle names must start with "ChimeraX-"
# to avoid clashes with package names in pypi.python.org.
# When uploaded to the ChimeraX toolshed, the bundle
# will be displayed without the ChimeraX- prefix.
name = "ChimeraX-DAQplugin"
version = "1.0.1"
license = "GPL-3.0-only"
authors = [{name = "Genki Terashi", email = "gterashi@purdue.edu"}]
description = "DAQ Score computation and visualization for cryo-EM models"
dynamic = ["classifiers", "requires-python"]
# Pure-Python bundle. Platform-specific backends are resolved at install
# time via PEP 508 environment markers (`sys_platform`, `platform_machine`),
# so a single py3-none-any wheel works on Linux, Windows, and macOS.
#
# Backend mapping:
#   Linux   -> onnxruntime-gpu + bundled CUDA/cuDNN/TensorRT (NVIDIA GPU path)
#   Windows -> onnxruntime-directml (any GPU vendor via DirectML)
#   macOS   -> onnxruntime (CPU EP); + mlx on Apple Silicon for Metal GPU
#
# Only one onnxruntime variant is ever installed per OS, so they cannot
# conflict. CPU EP is always available as fallback inside whichever
# onnxruntime package gets installed.
dependencies = [
    "ChimeraX-Core ~=1.1",
    "ChimeraX-UI ~=1.0",
    "ChimeraX-Map ~=1.0",
    "ChimeraX-Markers ~=1.0",
    "numpy >=1.20.0",
    "scipy >=1.7.0",
    "mrcfile >=1.4.0",
    "numba >=0.52.0",
    # ONNX Runtime: exactly one variant per OS
    "onnxruntime-gpu >=1.19.0; sys_platform == 'linux'",
    "onnxruntime-directml >=1.16.0; sys_platform == 'win32'",
    "onnxruntime >=1.16.0; sys_platform == 'darwin'",
    # Linux NVIDIA stack: TensorRT EP runs ~2.7x faster than the CUDA EP (and
    # ~400x faster than CPU) on the 3D-Conv DAQ model. libnvinfer.so.10 is NOT
    # available as a real wheel on plain PyPI — only an sdist stub is, whose
    # nested install from https://pypi.nvidia.com is unreliable (build
    # isolation / offline / Toolshed). So we pin the actual runtime-libs wheel
    # from NVIDIA's index by direct URL (one per arch). The ORT TensorRT EP
    # dlopens the .so only, so the Python `tensorrt`/`-bindings` package is not
    # needed. Pinned to TRT 10.x: the EP loads libnvinfer.so.10 (a TRT 11 wheel
    # ships libnvinfer.so.11 and won't load). If libnvinfer is ever missing,
    # backend='auto' still gives GPU acceleration via the CUDA EP below.
    "tensorrt-cu12-libs @ https://pypi.nvidia.com/tensorrt-cu12-libs/tensorrt_cu12_libs-10.16.1.11-py3-none-manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "tensorrt-cu12-libs @ https://pypi.nvidia.com/tensorrt-cu12-libs/tensorrt_cu12_libs-10.13.0.35-py2.py3-none-manylinux_2_31_aarch64.whl ; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "nvidia-cuda-runtime-cu12; sys_platform == 'linux'",
    "nvidia-cudnn-cu12 >=9.0.0; sys_platform == 'linux'",
    "nvidia-cublas-cu12; sys_platform == 'linux'",
    "nvidia-cufft-cu12; sys_platform == 'linux'",
    "nvidia-curand-cu12; sys_platform == 'linux'",
    "nvidia-cusolver-cu12; sys_platform == 'linux'",
    "nvidia-cusparse-cu12; sys_platform == 'linux'",
    # macOS Apple Silicon: MLX framework for Metal GPU compute.
    # No x86_64 mlx wheel exists; Intel Mac falls back to ORT CPU.
    "mlx >=0.20.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.readme]
content-type = "text/markdown"
text = """DAQ-Score: Deep-learning-based residue-wise Quality Assessment for cryo-EM models.

DAQplugin provides DAQ score computation and visualization for protein atomic models in cryo-EM maps.

This ChimeraX plugin enables:
- Interactive coloring of residues based on DAQ scores
- Live monitoring and recoloring during model manipulation
- Visualization of DAQ score points as markers
- Computation of DAQ scores from cryo-EM maps (grid-based and PDB-based)

For more information, see: https://github.com/gterashi/DAQplugin
"""

[project.urls]
Home = "https://github.com/gterashi/DAQplugin"

[project.entry-points."chimerax.bundle"]
daqcolor = "chimerax.daqcolor"

[chimerax]
# Set this value to a string to give your module name a
# different installed name than the project name.
module-name-override = "daqcolor"
pure = true
# Required so ChimeraX calls bundle_api.initialize() / finish() — needed
# to register the 'app quit' handler that releases ORT/MLX sessions
# before Python interpreter teardown (otherwise the process hangs after
# GUI close on Linux/CUDA).
custom-init = true
# Use old keys: ChimeraX 1.10 BundleBuilder requires min-session-version /
# max-session-version. The 1.12+ variant is min-session-ver / max-session-ver.
# Bump when dropping 1.10 support.
min-session-version = 1
max-session-version = 1
categories = ["General", "Volume Data"]
classifiers = [
    "Framework :: ChimeraX",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Environment :: MacOS X :: Aqua",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
]
# Commands and tools are defined in [chimerax.command.*] and [chimerax.tool.*] sections below
# which auto-generate the required classifiers

[chimerax.command."daqcolor apply"]
category = "General"
description = "Color residues from a numpy DAQ score file"

[chimerax.command."daqcolor monitor"]
category = "General"
description = "Start/stop live recoloring"

[chimerax.command."daqcolor points"]
category = "General"
description = "Show DAQ score points as markers"

[chimerax.command."daqcolor clear"]
category = "General"
description = "Close marker models"

[chimerax.command."daqscore compute_grid"]
category = "Volume Data"
description = "Compute DAQ scores from a cryo-EM map using contour threshold"

[chimerax.command."daqscore compute_pdb"]
category = "Volume Data"
description = "Compute DAQ scores at heavy atom positions from a PDB structure"

[chimerax.command."daq arrowwin"]
category = "Validation"
description = "DAQ arrow window: per-residue arrow visualization (selection or model mode)"

[chimerax.command."daq clearrestraints"]
category = "Validation"
description = "Clear ISOLDE position restraints created by daq arrowwin"

[chimerax.tool."DAQplugin"]
category = "Validation"
description = "DAQ score computation and residue-wise visualization"
